--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Metro UI</title>
-    <link rel="stylesheet" href="Styles/styles.css" />
+    <link rel="stylesheet" href="Styles/styles.css">
+	<meta http-equiv="expires" content="Mon, 30 Dec 2013 12:00:00 GMT">
 </head>
 <body>
     <div class="container">
         <h1>Neudesic Metro Component</h1>
         <section role="application" class="appbar-container hide">
-            <article id="CharmBar" class="charm-bar component" data-component="neu.metro.ui.Charm">
-                <!--<button class="scroll-btn scroll-top hide" data-direction="UP">Click to Scroll Up</button>-->
+            <div id="CharmBar" class="charm-bar component" data-component="neu.metro.ui.Charm">
                 <ul>
                     <li>
                         <a href="#"><span class="ui-symbols"></span></a>
                     </li>
                     <li>
-                        <a href="#"><span class="ui-symbols"></span></a>
+                        <a href="#"  class="component" data-component="neu.metro.ui.TriggerComponent" data-from="click" data-to="show" data-target-component="#Flyout"><span class="ui-symbols"></span></a>
                     </li>
                     <li>
                         <a href="#"><span class="ui-symbols"></span></a>
@@ -25,8 +25,7 @@
                         <a href="#"><span class="ui-symbols"></span></a>
                     </li>
                 </ul>
-                <!--<button class="scroll-btn scroll-bottom" data-direction="down">Click to Scroll Down</button>-->
-            </article>
+            </div>
         </section>
         <button class="component" data-component="neu.metro.ui.TriggerComponent" data-from="click" data-to="show" data-target-component="#CharmBar">Show Charm <span class="ui-symbols"></span></button>
         <br />
