adding FORK button for gh-pages

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         <br />
         <h2 class="component" data-component="neu.metro.ui.NetworkStatus" data-target="#NetworkStat">Network: <span id="NetworkStat"><span class="ui-symbols online"></span> <span class="ui-symbols offline"></span></span></h2>
     </div>
+	
+	<footer role="contentinfo">
+		<a class="btn" href="https://github.com/NeudesicIndia/MetroUI">Fork in Github</a>
+	</footer>
 
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
